--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
             <img src="logo.jpg" class="logo">
             <ul id="sidemenu">
-                <li><a href="act.html">Home</a></li>
-                <li><a href="4.html">About</a></li>
-                <li><a href="https://throneking.github.io/suhani/">Portfolio</a></li>
-                <li><a href="3.html">Contact</a></li>   
+                  <li><a href="https://throneking.github.io/Suhani.com/">Home</a></li>
+                <li><a href="https://throneking.github.io/suhani3/">About</a></li>
+                <li><a href="https://throneking.github.io/suhani/">Portifolio</a></li>
+                <li><a href="https://throneking.github.io/suhani2/">Contact</a></li>   
             </ul>
     </nav>
 </header>
